  [No probado]

4 de mayo de 2017

- Chat de trenes: Los trenes generan mensajes con un estilo determinado.
- ChangeMonitor, decorador para depuración.
- Cambios adicionales en medición.

30 de mayo de 2017

- con_puente: Longitud E2. Nuevo motor talgo. Boton para apagar el sistema.
- Mejor gestión de excepciones en proceso_pasos.

1 de junio de 2017

- Configuracion de systemd en /etc
- Desvio 6 no puede estar recto si la via de la estanteria no esta: Nueva
  directiva PermitirEstado para la configuración.

26 de julio de 2017

- Arreglar '.controlar_tramo_previo()' y parar solo en la estacion de destino en auto.
- Merge de "Posibilidad de descartar concurrencia para suscriptores de evento."

10 de agosto de 2017

- newlayout: Abrir tren al seleccionar clase.
- con_puente: Zonas de sonido para la vía de la estantería.
- maqueta: Evitar PermitirEstado en simulacion.
- Rutas de demostración.
- Estacion activa solo si hay un tren parando en ella.
- Fotos de estaciones.

15 de agosto de 2017

- maqueta: Colisión inminente por distancia cuando hay un tramo corto enmedio. Fix #15

17 de agosto de 2017

- maqueta, pista_medicion: Medición basada en evento de tren quitado de tramo en lugar
  de tren movido, para asegurar que pasan todas las ruedas.
- maqueta, eventos, con_puente: Mover DescartarConcurrencia a eventos.py
  porque es genérico.
- eventos: Creación de SuscriptorGenerico para facilitar recepción retrasada.
- eventos: Posibilidad de utilizar la publicacion como callback.
- pista_medicion: Uso de SuscriptorGenerico para recepción retrasada de
  EventoDesaparecido, para ignorar pequeñas desapariciones.
- pista_medicion: Reintento de una velocidad si a velocidades mas lentas no se había
  movido.
- proceso_pasos: Depuración más clara.
- tts: Locución más clara bajando el volumen para evitar la distorsión.

18 de agosto de 2017

- newlayout: Visualización de fotos en control para firefox.
