@@ -570,3 +570,7 @@
 
 - newlayout: Visualización de fotos en control para firefox.
 
+20 de agosto de 2017
+
+- maqueta: Factor de amplificación del sonido de un tren.
+
